--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: conspect.helper
 Type: Package
 Title: Speed up process of taking notes and making conspects
-Version: 0.0.1
+Version: 0.0.2
 Author: Vilmantas Gegzna
 Maintainer: The package maintainer <GegznV@gmail.com>
 Description: Helper functions to speed up process of taking notes and making
@@ -9,13 +9,12 @@ Description: Helper functions to speed up process of taking notes and making
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.0
 Depends:
-    magrittr
+    magrittr,
+    spMisc
 Imports:
     readr,
     dplyr,
     rstudioapi,
     spAddins
-    
-    
