--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,11 +11,14 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Remotes:
+    GegznaV/spMisc
 Depends:
     magrittr,
     spMisc
 Imports:
     readr,
+    stringr,
     dplyr,
     rstudioapi,
-    spAddins
+    addin.tools
